--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wakamol</title>
+    <title>Wekamol</title>
     <link rel="stylesheet" href="mole.css">
 </head>
 <body>
     <h1>Whack A Mole</h1>
     <h2>0</h2>
     <div id="board"></div>
-    
+    <div id="gameOver"><p>Game Over!</p></div>
     <script src="mole.js"></script>
 </body>
 </html>
